issue: Show new subtask button on mobile view
See: Yona Github issue #467

--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -211,6 +211,7 @@ input[type=number]::-webkit-outer-spin-button {
 .mb10 { margin-bottom:10px; }
 .mb20 { margin-bottom:20px; }
 .mr20 { margin-right:20px; }
+.ml4 { margin-left:4px; }
 .ml5 { margin-left:5px; }
 .ml6 { margin-left:6px; }
 .mr6 { margin-right:6px; }
